add Grocify JavaDoc, add simple session saving (saved to LocalAppData or equivalent), fix encoding issues